<resources>
    <string name="app_name">CS480FINAL</string>
    <string name="deluxtitle">Delux Tux</string>
    <string name="officalsupplier">Official fine formal wear supplier of the </string>
    <string name="nep">New England Patriots</string>
    <string name="opendaily">Open daily from</string>
    <string name="dailytime">10am to 8pm or by appointment</string>
    <string name="you_can_reach_us_at">You can reach us at</string>
    <string name="emailw">jricci367@gmail.com</string>
    <string name="phonew">508-668-9100</string>
    <string name="textw">Text:</string>
    <string name="addressw">1 West Street</string>
    <string name="directionsw">Directions:</string>
    <string name="emailf">deluxtux@hotmail.com:</string>
    <string name="phonef">508-520-9100</string>
    <string name="textf">Text:</string>
    <string name="addressf">333 East Street </string>
    <string name="franklin">Franklin, MA Store:</string>
    <string name="walpole">Walpole, MA Store:</string>


</resources>
