<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gaming.cs480final.welcome"
    android:id="@+id/activitiy_welcome">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="281dp"
        android:layout_height="32dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/caviardreamsbolditalic"
        android:text="@string/you_can_reach_us_at"
        android:textColor="@color/textPrimary"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="230dp"
        android:layout_height="34dp"
        android:layout_marginBottom="365dp"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="77dp"
        android:fontFamily="@font/caviardreamsbolditalic"
        android:text="our two seperate locations..."
        android:textColor="@color/textPrimary"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_marginBottom="313dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="29dp"
        android:text="@string/franklin"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="134dp"
        android:layout_height="26dp"
        android:layout_marginBottom="314dp"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="29dp"
        android:text="@string/walpole"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/fadd"
        android:layout_width="116dp"
        android:layout_height="24dp"
        android:layout_marginBottom="270dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/addressf"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/wadd"
        android:layout_width="114dp"
        android:layout_height="23dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="6dp"
        android:text="@string/addressw"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fadd"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/femail"
        android:layout_width="161dp"
        android:layout_height="21dp"
        android:layout_marginBottom="232dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/emailf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wemail"
        app:layout_constraintTop_toBottomOf="@+id/wadd"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wemail"
        android:layout_width="134dp"
        android:layout_height="20dp"
        android:layout_marginBottom="234dp"
        android:layout_marginStart="16dp"
        android:text="@string/emailw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fadd"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wphone"
        android:layout_width="108dp"
        android:layout_height="23dp"
        android:layout_marginBottom="228dp"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="12dp"
        android:text="@string/phonew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fphone"
        app:layout_constraintTop_toBottomOf="@+id/femail" />

    <TextView
        android:id="@+id/fphone"
        android:layout_width="106dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="1dp"
        android:text="@string/phonef"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wemail"
        app:layout_constraintVertical_bias="0.0" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="319dp"
        android:layout_height="209dp"
        android:layout_marginBottom="10dp"

        android:layout_marginEnd="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="3dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@+id/wphone"
        tools:context="com.example.gaming.assignment51.MapsActivity" />

</android.support.constraint.ConstraintLayout>
